# twitch-chat-hotspots

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  test_main.py
